@@ -8,6 +8,8 @@
 
     * las/arch/x86_64/main.c: Added the IDIV instruction
 
+    * las/arch/x86_64/main.c: Added the IMUL instruction
+
 
 2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>
 
